--- a/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/Pages/CharacterCreation_c.xaml
+++ b/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/Pages/CharacterCreation_c.xaml
@@ -23,6 +23,10 @@
     <ls:UIWidget.Resources>
         <ResourceDictionary>
 
+            <!-- <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Library/CCLib_c.xaml"/>
+            </ResourceDictionary.MergedDictionaries> -->
+
             <!-- Message box to ensure user wants to activate tutorials -->
             <ls:LSMessageBoxData x:Key="MessageBoxTutorialsCheck"
                                  Text="{Binding Source='h86f06e64g4588g4798gb828gf6e0268122af', Converter={StaticResource TranslatedStringConverter}}"
@@ -239,6 +243,12 @@
         <ls:CollectionFilterBehavior x:Name="ClassSpellSelectors" ItemsSource="{Binding ClassProgressionDetails.SpellSelectors}" Predicate="{Binding IsNotSubProgressionPredicate}"/>
         <ls:CollectionFilterBehavior x:Name="SubClassSpellSelectors" ItemsSource="{Binding ClassProgressionDetails.SpellSelectors}" Predicate="{Binding IsSubProgressionPredicate}"/>
 
+        <!-- MOD START - Racial passive selection -->
+        <ls:CollectionFilterBehavior x:Name="RacePassiveFeatures" ItemsSource="{Binding RacePassiveFeatures}" Predicate="{Binding IsNotSubProgressionPredicate}"/>
+        <ls:CollectionFilterBehavior x:Name="SubRacePassiveFeatures" ItemsSource="{Binding RacePassiveFeatures}" Predicate="{Binding IsSubProgressionPredicate}"/>
+        <ls:CollectionFilterBehavior x:Name="RacePassiveSelectors" ItemsSource="{Binding RaceProgressionDetails.NotSubPassiveSelectors}"/>
+        <ls:CollectionFilterBehavior x:Name="SubRacePassiveSelectors" ItemsSource="{Binding RaceProgressionDetails.SubPassiveSelectors}"/>
+        <!-- MOD END -->
         <ls:CollectionFilterBehavior x:Name="ClassPassiveFeatures" ItemsSource="{Binding PassiveFeatures}" Predicate="{Binding IsNotSubProgressionPredicate}"/>
         <ls:CollectionFilterBehavior x:Name="SubClassPassiveFeatures" ItemsSource="{Binding PassiveFeatures}" Predicate="{Binding IsSubProgressionPredicate}"/>
 
@@ -336,6 +346,7 @@
                                     <Grid x:Name="tabNavigation" Tag="None">
                                         <b:Interaction.Triggers>
                                             <b:DataTrigger Binding="{Binding Tag, ElementName=tabNavigation}" Value="GoBack">
+                                                <b:InvokeCommandAction Command="{Binding SetupGameplayTabNavigation}" CommandParameter="{Binding ElementName=gameplayTabs}"/>
                                                 <b:ChangePropertyAction TargetName="tabNavigation" PropertyName="Tag" Value="None" />
                                             </b:DataTrigger>
                                         </b:Interaction.Triggers>
@@ -580,6 +591,11 @@
                                                     </ListBox.ItemContainerStyle>
 
                                                     <b:Interaction.Triggers>
+                                                        
+                                                        <b:DataTrigger Binding="{Binding ElementName=gamePlayPage, Path=IsVisible}" Value="True">
+                                                            <b:InvokeCommandAction Command="{Binding SetupGameplayTabNavigation}" CommandParameter="{Binding ElementName=gameplayTabs}"/>
+                                                        </b:DataTrigger>
+
                                                         <!-- Only set if not in a subtab -->
                                                         <b:EventTrigger EventName="SelectionChanged">
                                                             <b:Interaction.Behaviors>
@@ -605,6 +621,11 @@
                                                     <ListBoxItem x:Name="spellPrepTab" Tag="spellprep" IsEnabled="{Binding SpellPrepare.Preparable.Count, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}"/>
 
                                                     <ListBoxItem x:Name="backgroundTab" Tag="background"/>
+
+                                                    <!-- MOD START - Add feat selection into CC -->
+                                                    <ListBoxItem x:Name="featTab" Tag="feat" Visibility="{Binding CanSelectFeat, Converter={StaticResource BoolToVisibleConverter}}"/>
+                                                    <ListBoxItem x:Name="featDetailsTab" Tag="featdetails" Visibility="{Binding SelectedFeatDetails.HasFeat, Converter={StaticResource BoolToVisibleConverter}}"/>
+                                                    <!-- MOD END -->
 
                                                     <ListBoxItem x:Name="abilityTab" Tag="ability"/>
                                                     <ListBoxItem x:Name="raceSkillsTab" Tag="raceskills" IsEnabled="{Binding AllSkills.RaceProficientSkills.MaxSelectedSkillCount, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}"/>
@@ -652,6 +673,7 @@
                                                     <b:EventTrigger EventName="Click">
                                                         <b:ChangePropertyAction TargetName="gameplayTabs" PropertyName="SelectedIndex" Value="{Binding Tag, ElementName=tabBar}" />
                                                         <b:ChangePropertyAction TargetName="tabBar" PropertyName="Tag" Value="CanJumpToAppearance" />
+                                                        <b:InvokeCommandAction Command="{Binding SetupGameplayTabNavigation}" CommandParameter="{Binding ElementName=gameplayTabs}"/>
                                                     </b:EventTrigger>
                                                 </b:Interaction.Triggers>
                                             </ls:LSButton>
@@ -780,6 +802,52 @@
                                     <Setter TargetName="MissingRequirementsMainError" Property="Margin" Value="0,0,0,300" />
 
                                     <Setter TargetName="bottomButtonsHolder" Property="Margin" Value="0,0,90,56"/>
+                                </DataTrigger>
+
+                                <!-- Animated Tabs Backplate Width matching -->
+                                <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="race">
+                                    <Setter TargetName="backplate" Property="Width">
+                                        <Setter.Value>
+                                            <MultiBinding Converter="{StaticResource AddMultipleConverter}">
+                                                <Binding Path="ActualWidth" ElementName="raceTab"/>
+                                                <Binding Path="ActualWidth" ElementName="subRaceTab"/>
+                                            </MultiBinding>
+                                        </Setter.Value>
+                                    </Setter>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="subrace">
+                                    <Setter TargetName="backplate" Property="Width">
+                                        <Setter.Value>
+                                            <MultiBinding Converter="{StaticResource AddMultipleConverter}">
+                                                <Binding Path="ActualWidth" ElementName="raceTab"/>
+                                                <Binding Path="ActualWidth" ElementName="subRaceTab"/>
+                                            </MultiBinding>
+                                        </Setter.Value>
+                                    </Setter>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="class">
+                                    <Setter TargetName="backplate" Property="Width">
+                                        <Setter.Value>
+                                            <MultiBinding Converter="{StaticResource AddMultipleConverter}">
+                                                <Binding Path="ActualWidth" ElementName="classTab"/>
+                                                <Binding Path="ActualWidth" ElementName="subClassTab"/>
+                                                <Binding Path="ActualWidth" ElementName="deityTab"/>
+                                                <Binding Path="ActualWidth" ElementName="spellPrepTab"/>
+                                            </MultiBinding>
+                                        </Setter.Value>
+                                    </Setter>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="subclass">
+                                    <Setter TargetName="backplate" Property="Width">
+                                        <Setter.Value>
+                                            <MultiBinding Converter="{StaticResource AddMultipleConverter}">
+                                                <Binding Path="ActualWidth" ElementName="classTab"/>
+                                                <Binding Path="ActualWidth" ElementName="subClassTab"/>
+                                                <Binding Path="ActualWidth" ElementName="deityTab"/>
+                                                <Binding Path="ActualWidth" ElementName="spellPrepTab"/>
+                                            </MultiBinding>
+                                        </Setter.Value>
+                                    </Setter>
                                 </DataTrigger>
 
                                 <DataTrigger Binding="{Binding Tag, ElementName=tabBar}" Value="CanJumpToAppearance">
@@ -1055,6 +1123,11 @@
 
                                                             <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=RaceSpellSelectors}" ItemTemplate="{StaticResource progressionSpellSelectors}" Visibility="{Binding FilteredItems.Count, ElementName=RaceSpellSelectors, Converter={StaticResource CountToVisibilityConverter}}"/>
 
+                                                            <!-- MOD START - Racial passive selection -->
+                                                            <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=RacePassiveFeatures}" ItemTemplate="{StaticResource progressionSpellsTemplate}" Visibility="{Binding FilteredItems.Count, ElementName=RacePassiveFeatures, Converter={StaticResource CountToVisibilityConverter}}"/>
+                                                            <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=RacePassiveSelectors}" ItemTemplate="{StaticResource progressionSpellsTemplate}" Visibility="{Binding FilteredItems.Count, ElementName=RacePassiveSelectors, Converter={StaticResource CountToVisibilityConverter}}"/>
+                                                            <!-- MOD END -->
+
                                                             <Control Template="{StaticResource progressionFeaturesList}" DataContext="{Binding ProgressionData.RaceProgression}" HorizontalAlignment="Center"/>
 
                                                         </StackPanel>
@@ -1112,6 +1185,11 @@
                                                             <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=SubRaceProgressions}" ItemTemplate="{StaticResource progressionSpellsTemplate}" Visibility="{Binding FilteredItems.Count, ElementName=SubRaceProgressions, Converter={StaticResource CountToVisibilityConverter}}"/>
 
                                                             <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=SubRaceSpellSelectors}" ItemTemplate="{StaticResource progressionSpellSelectors}" Visibility="{Binding FilteredItems.Count, ElementName=SubRaceSpellSelectors, Converter={StaticResource CountToVisibilityConverter}}"/>
+
+                                                            <!-- MOD START - Racial passive selection -->
+                                                            <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=SubRacePassiveFeatures}" ItemTemplate="{StaticResource progressionSpellsTemplate}" Visibility="{Binding FilteredItems.Count, ElementName=RacePassiveFeatures, Converter={StaticResource CountToVisibilityConverter}}"/>
+                                                            <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=SubRacePassiveSelectors}" ItemTemplate="{StaticResource progressionSpellsTemplate}" Visibility="{Binding FilteredItems.Count, ElementName=SubRacePassiveSelectors, Converter={StaticResource CountToVisibilityConverter}}"/>
+                                                            <!-- MOD END -->
 
                                                             <Control Template="{StaticResource progressionFeaturesList}" DataContext="{Binding ProgressionData.SubRaceProgression}" HorizontalAlignment="Center"/>
 
@@ -1548,6 +1626,15 @@
                                     </Setter>
                                 </DataTrigger>
 
+                                <!-- MOD START - Add feat selection into CC -->
+                                <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="feat">
+                                    <Setter TargetName="gameplayPanel" Property="Template" Value="{StaticResource featsPanel}"/>
+                                </DataTrigger>
+
+                                <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="featdetails">
+                                    <Setter TargetName="gameplayPanel" Property="Template" Value="{StaticResource featDetailsPanel}"/>
+                                </DataTrigger>
+                                <!-- MOD END -->
 
                                 <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="appearance">
 
