--- a/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/Pages/CharacterLevelUp_c.xaml
+++ b/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/Pages/CharacterLevelUp_c.xaml
@@ -16,6 +16,10 @@
     <ls:UIWidget.Resources>
         <ResourceDictionary>
 
+            <!-- <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Library/CCLib_c.xaml"/>
+            </ResourceDictionary.MergedDictionaries> -->
+
             <System:TimeSpan x:Key="LevelUpShowItemsStartTime">0:0:1.5</System:TimeSpan>
             <Duration x:Key="LevelUpTextAndBannerDuration">0:0:0.4</Duration>
             <Duration x:Key="LevelUpItemAppearDuration">0:0:0.2</Duration>
@@ -380,6 +384,10 @@
                                             <ListBoxItem x:Name="draconicTab" Tag="draconic" Visibility="Collapsed"/>
                                             <ListBoxItem x:Name="draconicDragonbornTab" Tag="draconicDragonborn" Visibility="Collapsed"/>
 
+                                            <!-- MOD START - Add race skill selection into CC -->
+                                            <ListBoxItem x:Name="raceSkillsTab" Tag="raceskills" IsEnabled="{Binding AllSkills.RaceProficientSkills.MaxSelectedSkillCount, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}"/>
+                                            <!-- MOD END -->
+
                                             <ListBoxItem x:Name="skillsTab" Tag="skills" Visibility="{Binding AllSkills.ClassProficientSkills.MaxSelectedSkillCount, Converter={StaticResource CountToVisibilityConverter}}"/>
                                             <ListBoxItem x:Name="expertiseTab" Tag="expertise" Visibility="{Binding AllSkills.ExpertiseSkills.MaxSelectedSkillCount, Converter={StaticResource CountToVisibilityConverter}}"/>
 
@@ -626,9 +634,25 @@
                                 <Setter TargetName="bottomButtons" Property="IsEnabled" Value="True"/>
                             </DataTrigger>
 
+                            <!-- MOD START - Racial passive features in level up -->
+                            <DataTrigger Binding="{Binding FilteredItems.Count, ElementName=RacePassiveSelectors, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}" Value="True">
+                                <Setter TargetName="raceTab" Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding FilteredItems.Count, ElementName=SubRacePassiveSelectors, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}" Value="True">
+                                <Setter TargetName="raceTab" Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                            <!-- MOD END -->
+
                             <DataTrigger Binding="{Binding FilteredItems.Count, ElementName=RaceSpellSelectors, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}" Value="True">
                                 <Setter TargetName="raceTab" Property="Visibility" Value="Visible"/>
                             </DataTrigger>
+
+                            <!-- MOD START - Racial subrace spells in level up -->
+                            <DataTrigger Binding="{Binding FilteredItems.Count, ElementName=SubRaceSpellSelectors, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}" Value="True">
+                                <Setter TargetName="raceTab" Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                            <!-- MOD END -->
+
                             <DataTrigger Binding="{Binding FilteredItems.Count, ElementName=RaceProgressions, Converter={StaticResource GreaterThanConverter}, ConverterParameter=0}" Value="True">
                                 <Setter TargetName="raceTab" Property="Visibility" Value="Visible"/>
                             </DataTrigger>
@@ -1336,7 +1360,20 @@ ConverterParameter=0}" Value="True"/>
 
                                                 <TextBlock Text="{Binding DummyCharacter.Stats.Race.DisplayName}" Style="{StaticResource PanelHeaderText}" Margin="0,0,0,50"/>
 
+                                                <!-- MOD START - Racial passive features in level up -->
+                                                <ListBoxItem Template="{StaticResource levelUpListBoxItemTemplate}" Visibility="{Binding FilteredItems.Count, ElementName=RacePassiveSelectors, Converter={StaticResource CountToVisibilityConverter}}" Style="{StaticResource levelUpListBoxItemStyle}">
+                                                    <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=RacePassiveSelectors}" ItemTemplate="{StaticResource progressionPassiveSelectors}" ItemContainerStyle="{StaticResource UpdateStateItemStyle}"/>
+                                                </ListBoxItem>
+                                                <ListBoxItem Template="{StaticResource levelUpListBoxItemTemplate}" Visibility="{Binding FilteredItems.Count, ElementName=SubRacePassiveSelectors, Converter={StaticResource CountToVisibilityConverter}}" Style="{StaticResource levelUpListBoxItemStyle}">
+                                                    <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=SubRacePassiveSelectors}" ItemTemplate="{StaticResource progressionPassiveSelectors}" ItemContainerStyle="{StaticResource UpdateStateItemStyle}"/>
+                                                </ListBoxItem>
+                                                <!-- MOD END -->
+
                                                 <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=RaceSpellSelectors}" ItemTemplate="{StaticResource progressionSpellSelectors}" Visibility="{Binding FilteredItems.Count, ElementName=RaceSpellSelectors, Converter={StaticResource CountToVisibilityConverter}}"/>
+
+                                                <!-- MOD START - Racial subrace spells in level up -->
+                                                <ItemsControl ItemsSource="{Binding FilteredItems, ElementName=SubRaceSpellSelectors}" ItemTemplate="{StaticResource progressionSpellSelectors}" Visibility="{Binding FilteredItems.Count, ElementName=SubRaceSpellSelectors, Converter={StaticResource CountToVisibilityConverter}}"/>
+                                                <!-- MOD END -->
 
                                                 <ItemsControl x:Name="featureSpells" ItemsSource="{Binding FilteredItems, ElementName=RaceProgressions}" ItemTemplate="{StaticResource progressionSpellsTemplate}"/>
 
@@ -1536,6 +1573,12 @@ ConverterParameter=0}" Value="True"/>
                                     </Setter.Value>
                                 </Setter>
                             </DataTrigger>
+
+                            <!-- MOD START - Add race skill selection into CC -->
+                            <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="raceskills">
+                                <Setter TargetName="gameplayPanel" Property="Template" Value="{StaticResource raceSkillProficiencyPanelTemplate}"/>
+                            </DataTrigger>
+                            <!-- MOD END -->
 
                             <DataTrigger Binding="{Binding ElementName=gameplayTabs, Path=SelectedItem.Tag}" Value="skills">
                                 <Setter TargetName="gameplayPanel" Property="Template" Value="{StaticResource skillProficiencyPanelTemplate}"/>
