--- a/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/StateMachines/Keyboard.xaml
+++ b/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/GUI/StateMachines/Keyboard.xaml
@@ -33,21 +33,21 @@
 		</ls:State>
 
 		<!--STATE: CharacterChangeAppearance -->
-		<ls:State Name = "CharacterChangeAppearance" HideStatesBelow = "True" DisableStatesBelow = "True" IsModal="True" IsModalCameraControlAllowed="True" Layout = "Player" Owner = "Player" ForceSplitscreen="True">
+		<ls:State Name = "CharacterChangeAppearance" HideStatesBelow = "True" DisableStatesBelow = "True" Layout = "Player" Owner = "Player" ForceSplitscreen="True">
 			<!--<ls:State.Widgets>
 				<ls:StateWidget Filename="AlwaysOnTopOverlay.xaml" Layer="MessageBox"/>
-				<ls:StateWidget Filename="Notification_c.xaml" Layer="Notifications"/>
-				<ls:StateWidget Filename="CharacterChangeAppearance_c.xaml" Layer="HUD"/> - Unedited, has to be included for loading the custom CCLib_c
+				<ls:StateWidget Filename="Notification.xaml" Layer="Default"/>
+				<ls:StateWidget Filename="CharacterChangeAppearance.xaml" Layer="HUD"/>
 				<ls:StateWidget Filename="ScreenFade.xaml" Layer="ScreenFade" BlockedLoading="True"/>
 			</ls:State.Widgets>-->
 		</ls:State>
 
 		<!--STATE: Henchmen -->
-		<ls:State Name = "Henchmen" HideStatesBelow = "True" DisableStatesBelow = "True" IsModal="True" IsModalCameraControlAllowed="True" Layout="Player" Owner="Player" ForceSplitscreen="True">
+		<ls:State Name = "Henchmen" HideStatesBelow = "True" DisableStatesBelow = "True" Layout = "Common" Owner = "Player">
 			<!--<ls:State.Widgets>
 				<ls:StateWidget Filename="AlwaysOnTopOverlay.xaml" Layer="MessageBox"/>
-				<ls:StateWidget Filename="Notification_c.xaml" Layer="Notifications"/>
-				<ls:StateWidget Filename="Henchmen_c.xaml" Layer="HUD"/> - Unedited, has to be included for loading the custom CCLib_c
+				<ls:StateWidget Filename="Notification.xaml" Layer="Default"/>
+				<ls:StateWidget Filename="Henchmen.xaml" Layer="HUD"/>
 				<ls:StateWidget Filename="ScreenFade.xaml" Layer="ScreenFade" BlockedLoading="True"/>
 			</ls:State.Widgets>-->
 		</ls:State>
